--- a/Source/EnhancedConsoleApp/EnhancedConsoleApp.csproj
+++ b/Source/EnhancedConsoleApp/EnhancedConsoleApp.csproj
@@ -1,10 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+  <PropertyGroup Label="Build">
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
-  </ItemGroup>
+  <PropertyGroup Label="Package">
+    <Product>Enhanced Console App</Product>
+    <Description>Enhanced Console App with Hosting Framework (Dependency Injection, Configuration, Logging)</Description>
+    <PackageTags>Tag1;Tag2;Tag3</PackageTags>
+  </PropertyGroup>
+
 </Project>
