Include Template in Nuget Package

--- a/Source/EnhancedConsoleApp/EnhancedConsoleApp.csproj
+++ b/Source/EnhancedConsoleApp/EnhancedConsoleApp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Build">
     <TargetFramework>net5.0</TargetFramework>
@@ -6,8 +6,19 @@
 
   <PropertyGroup Label="Package">
     <Product>Enhanced Console App</Product>
+    <PackageType>Template</PackageType>
+    <PackageVersion>1.0</PackageVersion>
     <Description>Enhanced Console App with Hosting Framework (Dependency Injection, Configuration, Logging)</Description>
-    <PackageTags>Tag1;Tag2;Tag3</PackageTags>
+    <PackageTags>C#;Template;Tag3</PackageTags>
+    <IncludeContentInPack>true</IncludeContentInPack>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <ContentTargetFolders>content</ContentTargetFolders>
+    <NoWarn>$(NoWarn);NU5128</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="templates\**\*" Exclude="templates\**\bin\**;templates\**\obj\**" />
+    <Compile Remove="**\*" />
+  </ItemGroup>
 
 </Project>
