--- a/Source/EnhancedConsoleApp/EnhancedConsoleApp.csproj
+++ b/Source/EnhancedConsoleApp/EnhancedConsoleApp.csproj
@@ -16,8 +16,12 @@
     <NoWarn>$(NoWarn);NU5128</NoWarn>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Content Include="templates\**\*" Exclude="templates\**\bin\**;templates\**\obj\**" />
+    <Content Include="..\templates\**\*" Exclude="..\templates\**\bin\**;..\templates\**\obj\**" />
     <Compile Remove="**\*" />
   </ItemGroup>
 
