Change Action to only use Pack and not cake

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
       run: dotnet cake --target=Test
       shell: pwsh
     - name: 'Dotnet Cake Pack'
-      run: dotnet cake --target=Pack
+      run: dotnet pack
       shell: pwsh
     - name: 'Publish Artefacts'
       uses: actions/upload-artifact@v2.2.4
