Change back to only put on Nuget on Release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
   push-nuget:
     name: 'Push NuGet Packages'
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'release'
     environment:
       name: 'NuGet'
       url: https://www.nuget.org/packages/EnhancedConsoleApp
