--- a/Source/TemplatePacker/TemplatePacker.csproj
+++ b/Source/TemplatePacker/TemplatePacker.csproj
@@ -8,7 +8,7 @@
     <Description>Enhanced Console App with Hosting Framework (Dependency Injection, Configuration, Logging)</Description>
     <PackageTags>C#;Template;Tag3</PackageTags>
 
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
@@ -18,11 +18,23 @@
 
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <DelaySign>false</DelaySign>
+    <AssemblyOriginatorKeyFile>MyKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Content Include="..\templates\**\*" Exclude="..\templates\**\bin\**;..\templates\**\obj\**" />
     <Compile Remove="**\*" />
+    <Content Remove="..\templates\.template.config\**" />
+    <Content Remove="..\templates\Properties\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="..\templates\appsettings.Development.json" />
+    <Content Remove="..\templates\appsettings.json" />
+    <Content Remove="..\templates\EnhancedConsoleApp.csproj" />
+    <Content Remove="..\templates\Program.cs" />
+    <Content Remove="..\templates\Worker.cs" />
   </ItemGroup>
 
 </Project>
