--- a/Source/Directory.Build.props
+++ b/Source/Directory.Build.props
@@ -9,7 +9,7 @@
 
   <PropertyGroup Label="Signing">
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>TemplatePacker/MyKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>TemplatePacker.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup Label="Source Link">
