--- a/Source/templates/EnhancedConsoleApp.csproj
+++ b/Source/templates/EnhancedConsoleApp.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyOriginatorKeyFile>TemplatePacker.snk</AssemblyOriginatorKeyFile>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
