--- a/Source/TemplatePacker/TemplatePacker.csproj
+++ b/Source/TemplatePacker/TemplatePacker.csproj
@@ -6,7 +6,7 @@
     <PackageVersion>1.0</PackageVersion>
     <PackageId>mcbride-clint.EnhancedConsoleApp</PackageId>
     <Description>Enhanced Console App with Hosting Framework (Dependency Injection, Configuration, Logging)</Description>
-    <PackageTags>C#;Template;Tag3</PackageTags>
+    <PackageTags>C#;Template;Console</PackageTags>
 
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
@@ -19,7 +19,7 @@
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DelaySign>false</DelaySign>
-    <AssemblyOriginatorKeyFile>TemplatePacker.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>../../TemplatePacker.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
 
