--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,8 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
-- task: NuGetCommand@2
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet pack $(buildConfiguration)'
   inputs:
     command: pack
     versioningScheme: byPrereleaseNumber
