--- a/Source/templates/EnhancedConsoleApp/EnhancedConsoleApp.csproj
+++ b/Source/templates/EnhancedConsoleApp/EnhancedConsoleApp.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <SignAssembly>false</SignAssembly>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
