--- a/Source/TemplatePacker.csproj
+++ b/Source/TemplatePacker.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup Label="Package">
     <Product>Enhanced Console App</Product>
     <PackageType>Template</PackageType>
+    <PackageVersion>1.0.3</PackageVersion>
     <PackageId>mcbride-clint.EnhancedConsoleApp</PackageId>
     <Description>Enhanced Console App with Hosting Framework (Dependency Injection, Configuration, Logging)</Description>
     <PackageTags>C#;Template;Console</PackageTags>
@@ -20,6 +21,7 @@
     <DelaySign>false</DelaySign>
     <AssemblyOriginatorKeyFile>../TemplatePacker.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
